# splendir

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
src/: filesystem.rs  gui.rs  gui_main.rs  lib.rs  logging.rs  main.rs  scanner.rs  tree.rs
